--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
@@ -109,7 +109,7 @@
           <h1 class="text_big text__color_white">
             Cyberarena<br /><span class="text__font_colizeum text__color_yellow"
               >COLIZEUM Madrid</span
-            >
+            ><br />马德里网咖
           </h1>
           <p class="text_middle text__color_white">
             <span class="text__font_colizeum text__color_yellow"
@@ -775,12 +775,6 @@
                 </div>
                 <div class="swiper-slide text__color_white">
                   <img src="promos/3.png" alt="CYBERARENA COLIZEUM Madrid" />
-                  <a class="button__book wechat-modal-trigger" href="#"
-                    >更多信息</a
-                  >
-                </div>
-                <div class="swiper-slide text__color_white">
-                  <img src="promos/4.png" alt="CYBERARENA COLIZEUM Madrid" />
                   <a class="button__book wechat-modal-trigger" href="#"
                     >更多信息</a
                   >
