--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
     <footer class="footer">
       <a
         class="text_middle text__color_black"
-        href="https://colizeumarena.com/en"
+        href="https://xhslink.com/m/3LjEw7tbvZz"
         target="_blank"
         rel="noopener"
         >&#64;COLIZEUM</a
@@ -833,7 +833,7 @@
             alt="WeChat"
         /></a>
         <a
-          href="https://www.xiaohongshu.com/user/profile/colizeum_madrid"
+          href="https://xhslink.com/m/3LjEw7tbvZz"
           target="_blank"
           rel="noopener"
           title="rednote-link"
