--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
         href="https://xhslink.com/m/3LjEw7tbvZz"
         target="_blank"
         rel="noopener"
-        >&#64;COLIZEUM</a
+        >&#64;colizeum_madrid</a
       >
       <div class="footer__socials">
         <a href="#" class="wechat-modal-trigger" title="wechat-link"
